<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="395dp"
        android:layout_height="587dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="109dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/A"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/D"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="22dp"
            android:background="@color/black"
            android:text="@string/letter_A" />

        <Button
            android:id="@+id/B"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/A"
            android:layout_alignBottom="@+id/A"
            android:layout_centerHorizontal="true"
            android:background="@color/black"
            android:text="@string/letter_B" />

        <Button
            android:id="@+id/C"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/A"
            android:layout_alignBottom="@+id/A"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="12dp"
            android:background="@color/black"
            android:text="@string/letter_C" />

        <Button
            android:id="@+id/D"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/G"
            android:layout_alignStart="@+id/A"
            android:layout_marginBottom="9dp"
            android:background="@color/black"
            android:text="@string/letter_D" />

        <Button
            android:id="@+id/E"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/D"
            android:layout_alignStart="@+id/B"
            android:layout_alignBottom="@+id/D"
            android:background="@color/black"
            android:text="@string/letter_E" />

        <Button
            android:id="@+id/F"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/E"
            android:layout_alignStart="@+id/C"
            android:layout_alignBottom="@+id/E"
            android:background="@color/black"
            android:text="@string/letter_F" />

        <Button
            android:id="@+id/G"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/J"
            android:layout_alignStart="@+id/D"
            android:layout_marginBottom="8dp"
            android:background="@color/black"
            android:text="@string/letter_G" />

        <Button
            android:id="@+id/H"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/G"
            android:layout_alignStart="@+id/E"
            android:layout_alignBottom="@+id/G"
            android:background="@color/black"
            android:text="@string/letter_H" />

        <Button
            android:id="@+id/I"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/H"
            android:layout_alignStart="@+id/F"
            android:layout_alignBottom="@+id/H"
            android:background="@color/black"
            android:text="@string/letter_I" />

        <Button
            android:id="@+id/J"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/M"
            android:layout_alignStart="@+id/G"
            android:layout_marginBottom="8dp"
            android:background="@color/black"
            android:text="@string/letter_J" />

        <Button
            android:id="@+id/K"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/J"
            android:layout_alignStart="@+id/H"
            android:layout_alignBottom="@+id/J"
            android:background="@color/black"
            android:text="@string/letter_K" />

        <Button
            android:id="@+id/L"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/K"
            android:layout_alignStart="@+id/I"
            android:layout_alignBottom="@+id/K"
            android:background="@color/black"
            android:text="@string/letter_L" />

        <Button
            android:id="@+id/M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/P"
            android:layout_alignStart="@+id/J"
            android:layout_marginBottom="21dp"
            android:background="@color/black"
            android:text="@string/letter_M" />

        <Button
            android:id="@+id/N"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/M"
            android:layout_alignStart="@+id/K"
            android:layout_alignBottom="@+id/M"
            android:background="@color/black"
            android:text="@string/letter_N" />

        <Button
            android:id="@+id/O"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/N"
            android:layout_alignStart="@+id/L"
            android:layout_alignBottom="@+id/N"
            android:background="@color/black"
            android:text="@string/letter_O" />

        <Button
            android:id="@+id/P"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/M"
            android:layout_alignBottom="@+id/Q"
            android:layout_marginBottom="12dp"
            android:background="@color/black"
            android:text="@string/letter_P" />

        <Button
            android:id="@+id/Q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/S"
            android:layout_alignStart="@+id/N"
            android:layout_marginBottom="12dp"
            android:background="@color/black"
            android:text="@string/letter_Q" />

        <Button
            android:id="@+id/R"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/P"
            android:layout_alignStart="@+id/O"
            android:layout_alignBottom="@+id/P"
            android:background="@color/black"
            android:text="@string/letter_R" />

        <Button
            android:id="@+id/S"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/T"
            android:layout_alignStart="@+id/P"
            android:layout_alignBottom="@+id/T"
            android:background="@color/black"
            android:text="@string/letter_S" />

        <Button
            android:id="@+id/T"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/V"
            android:layout_alignStart="@+id/Q"
            android:layout_marginBottom="13dp"
            android:background="@color/black"
            android:text="@string/letter_T" />

        <Button
            android:id="@+id/U"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/T"
            android:layout_alignStart="@+id/R"
            android:layout_alignBottom="@+id/T"
            android:background="@color/black"
            android:text="@string/letter_U" />

        <Button
            android:id="@+id/V"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/Z"
            android:layout_alignStart="@+id/S"
            android:layout_marginBottom="16dp"
            android:background="@color/black"
            android:text="@string/letter_V" />

        <Button
            android:id="@+id/W"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/X"
            android:layout_alignStart="@+id/T"
            android:layout_alignBottom="@+id/X"
            android:background="@color/black"
            android:text="@string/letter_W" />

        <Button
            android:id="@+id/X"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/V"
            android:layout_alignStart="@+id/U"
            android:layout_alignBottom="@+id/V"
            android:background="@color/black"
            android:text="@string/letter_X" />

        <Button
            android:id="@+id/Y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button52"
            android:layout_alignStart="@+id/V"
            android:layout_alignBottom="@+id/button52"
            android:background="@color/black"
            android:text="@string/letter_Y" />

        <Button
            android:id="@+id/button52"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/W"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:text="Button"
            android:visibility="invisible" />

        <Button
            android:id="@+id/Z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button52"
            android:layout_alignStart="@+id/X"
            android:layout_alignBottom="@+id/button52"
            android:background="@color/black"
            android:text="@string/letter_Z" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>